feat: add func playAudio

--- a/sounds/index.html
+++ b/sounds/index.html
@@ -4,10 +4,46 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/ico">
+   <title>eco-sounds</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
-   
+   <div class="container">
+      <header class="header">
+      <div class="header-logo"></div>
+         <nav class="nav">
+            <ul class="header-list">
+               <li>Соловей</li>
+               <li>Дрозд</li>
+               <li>Малиновка</li>
+               <li>Жаворонок</li>
+               <li>Славка</li>
+            </ul>
+         </nav>
+      </header>
+   </div>
+
+
+      <main class="main"> 
+         <button class="button"></button>
+      </main>
+
+      <div class="container">
+      <footer class="footer">
+         <div class="footer-left">
+            <p>©</p>
+            <p>2022</p>
+            <p><a href="https://github.com/githublara">github</a></p>
+         </div>
+         <div class="footer-right">
+            <a href="https://rs.school/js-stage0/"></a>
+         </div>
+      </footer>
+      </div>
+
+
+
+   <script src="index.js"></script>
 </body>
 </html>
