feat: add changeImage

--- a/sounds/index.html
+++ b/sounds/index.html
@@ -11,21 +11,21 @@
 <body>
    <div class="container">
       <header class="header">
-      <div class="header-logo"></div>
+      <div class="header-logo header-item active" data-head="forest"></div>
          <nav class="nav">
             <ul class="header-list">
-               <li>Соловей</li>
-               <li>Дрозд</li>
-               <li>Малиновка</li>
-               <li>Жаворонок</li>
-               <li>Славка</li>
+               <li class="header-item" data-head="solovey">Соловей</li>
+               <li class="header-item" data-head="drozd">Дрозд</li>
+               <li class="header-item" data-head="zarynka">Малиновка</li>
+               <li class="header-item" data-head="javoronok">Жаворонок</li>
+               <li class="header-item" data-head="slavka">Славка</li>
             </ul>
          </nav>
       </header>
    </div>
 
 
-      <main class="main"> 
+      <main class="main" data-head="forest"> 
          <button class="button"></button>
       </main>
 
@@ -36,8 +36,8 @@
             <p>2022</p>
             <p><a href="https://github.com/githublara">github</a></p>
          </div>
-         <div class="footer-right">
-            <a href="https://rs.school/js-stage0/"></a>
+         <div>
+            <a class="footer-right" href="https://rs.school/js-stage0/"></a>
          </div>
       </footer>
       </div>
