--- a/sounds/index.html
+++ b/sounds/index.html
@@ -14,7 +14,7 @@
       <div class="header-logo header-item active" data-head="forest"></div>
          <nav class="nav">
             <ul class="header-list">
-               <li class="header-item" data-head="solovey">Соловей</li>
+               <li class="header-item" data-head="solovey">Соловей.</li>
                <li class="header-item" data-head="drozd">Дрозд</li>
                <li class="header-item" data-head="zarynka">Малиновка</li>
                <li class="header-item" data-head="javoronok">Жаворонок</li>
